--- a/hartLogAnalyze/hartLogAnalyze.csproj
+++ b/hartLogAnalyze/hartLogAnalyze.csproj
@@ -7,4 +7,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MSTest.TestFramework" Version="3.1.1" />
+  </ItemGroup>
+
 </Project>
